# dspBossAdmin

./: .gitignore  LICENSE  README.md  dspBossAdmin.py  requirements.txt  setup.cfg
dspBossAdmin/: __init__.py  app.py  database.py  settings.py
dspBossAdmin/models/: system.py
dspBossAdmin/templates/: index.html
dspBossAdmin/templates/admin/: index.html
